// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Check dark page against snapshot 1`] = `
<Page
  aria-label="Page layout"
  className="my-page-class"
  defaultManagedSidebarIsOpen={true}
  getBreakpoint={[Function]}
  header={
    <PageHeader
      headerTools="PageHeaderTools | Avatar"
      logo="Logo"
      onNavToggle={[Function]}
    />
  }
  id="PageId"
  isBreadcrumbWidthLimited={false}
  isManagedSidebar={false}
  isNotificationDrawerExpanded={false}
  mainTabIndex={-1}
  onNotificationDrawerExpand={[Function]}
  onPageResize={[Function]}
  sidebar={
    <PageSidebar
      isNavOpen={true}
      nav="Navigation"
      theme="dark"
    />
  }
>
  <div
    aria-label="Page layout"
    className="pf-c-page pf-m-resize-observer pf-m-breakpoint-default my-page-class"
    id="PageId"
  >
    <PageHeader
      headerTools="PageHeaderTools | Avatar"
      logo="Logo"
      onNavToggle={[Function]}
    >
      <header
        className="pf-c-page__header"
      >
        <div
          className="pf-c-page__header-brand"
        >
          <a
            className="pf-c-page__header-brand-link"
          >
            Logo
          </a>
        </div>
        PageHeaderTools | Avatar
      </header>
    </PageHeader>
    <PageSidebar
      isNavOpen={true}
      nav="Navigation"
      theme="dark"
    >
      <div
        aria-hidden={false}
        className="pf-c-page__sidebar pf-m-expanded"
        id="page-sidebar"
      >
        <div
          className="pf-c-page__sidebar-body"
        >
          Navigation
        </div>
      </div>
    </PageSidebar>
    <main
      className="pf-c-page__main"
      tabIndex={-1}
    >
      <PageSection
        variant="default"
      >
        <section
          className="pf-c-page__main-section"
        >
          Section with default background
        </section>
      </PageSection>
      <PageSection
        variant="light"
      >
        <section
          className="pf-c-page__main-section pf-m-light"
        >
          Section with light background
        </section>
      </PageSection>
      <PageSection
        variant="dark"
      >
        <section
          className="pf-c-page__main-section pf-m-dark-200"
        >
          Section with dark background
        </section>
      </PageSection>
      <PageSection
        variant="darker"
      >
        <section
          className="pf-c-page__main-section pf-m-dark-100"
        >
          Section with darker background
        </section>
      </PageSection>
    </main>
  </div>
</Page>
`;

exports[`Check page horizontal layout example against snapshot 1`] = `
<Page
  aria-label="Page layout"
  className="my-page-class"
  defaultManagedSidebarIsOpen={true}
  getBreakpoint={[Function]}
  header={
    <PageHeader
      headerTools="PageHeaderTools | Avatar"
      logo="Logo"
      topNav="Navigation"
    />
  }
  id="PageId"
  isBreadcrumbWidthLimited={false}
  isManagedSidebar={false}
  isNotificationDrawerExpanded={false}
  mainTabIndex={-1}
  onNotificationDrawerExpand={[Function]}
  onPageResize={[Function]}
  sidebar={
    <PageSidebar
      isNavOpen={true}
    />
  }
>
  <div
    aria-label="Page layout"
    className="pf-c-page pf-m-resize-observer pf-m-breakpoint-default my-page-class"
    id="PageId"
  >
    <PageHeader
      headerTools="PageHeaderTools | Avatar"
      logo="Logo"
      topNav="Navigation"
    >
      <header
        className="pf-c-page__header"
      >
        <div
          className="pf-c-page__header-brand"
        >
          <a
            className="pf-c-page__header-brand-link"
          >
            Logo
          </a>
        </div>
        <div
          className="pf-c-page__header-nav"
        >
          Navigation
        </div>
        PageHeaderTools | Avatar
      </header>
    </PageHeader>
    <PageSidebar
      isNavOpen={true}
    >
      <div
        aria-hidden={false}
        className="pf-c-page__sidebar pf-m-expanded"
        id="page-sidebar"
      >
        <div
          className="pf-c-page__sidebar-body"
        />
      </div>
    </PageSidebar>
    <main
      className="pf-c-page__main"
      tabIndex={-1}
    >
      <PageSection
        variant="default"
      >
        <section
          className="pf-c-page__main-section"
        >
          Section with default background
        </section>
      </PageSection>
      <PageSection
        variant="light"
      >
        <section
          className="pf-c-page__main-section pf-m-light"
        >
          Section with light background
        </section>
      </PageSection>
      <PageSection
        variant="dark"
      >
        <section
          className="pf-c-page__main-section pf-m-dark-200"
        >
          Section with dark background
        </section>
      </PageSection>
      <PageSection
        variant="darker"
      >
        <section
          className="pf-c-page__main-section pf-m-dark-100"
        >
          Section with darker background
        </section>
      </PageSection>
    </main>
  </div>
</Page>
`;

exports[`Check page to verify breadcrumb is created - PageBreadcrumb syntax 1`] = `
<Page
  aria-label="Page layout"
  className="my-page-class"
  defaultManagedSidebarIsOpen={true}
  getBreakpoint={[Function]}
  header={
    <PageHeader
      headerTools="PageHeaderTools | Avatar"
      logo="Logo"
      topNav="Navigation"
    />
  }
  id="PageId"
  isBreadcrumbWidthLimited={false}
  isManagedSidebar={false}
  isNotificationDrawerExpanded={false}
  mainTabIndex={-1}
  onNotificationDrawerExpand={[Function]}
  onPageResize={[Function]}
  sidebar={
    <PageSidebar
      isNavOpen={true}
    />
  }
>
  <div
    aria-label="Page layout"
    className="pf-c-page pf-m-resize-observer pf-m-breakpoint-default my-page-class"
    id="PageId"
  >
    <PageHeader
      headerTools="PageHeaderTools | Avatar"
      logo="Logo"
      topNav="Navigation"
    >
      <header
        className="pf-c-page__header"
      >
        <div
          className="pf-c-page__header-brand"
        >
          <a
            className="pf-c-page__header-brand-link"
          >
            Logo
          </a>
        </div>
        <div
          className="pf-c-page__header-nav"
        >
          Navigation
        </div>
        PageHeaderTools | Avatar
      </header>
    </PageHeader>
    <PageSidebar
      isNavOpen={true}
    >
      <div
        aria-hidden={false}
        className="pf-c-page__sidebar pf-m-expanded"
        id="page-sidebar"
      >
        <div
          className="pf-c-page__sidebar-body"
        />
      </div>
    </PageSidebar>
    <main
      className="pf-c-page__main"
      tabIndex={-1}
    >
      <PageBreadcrumb>
        <section
          className="pf-c-page__main-breadcrumb"
        >
          <Breadcrumb>
            <nav
              aria-label="Breadcrumb"
              className="pf-c-breadcrumb"
              data-ouia-component-id="OUIA-Generated-Breadcrumb-2"
              data-ouia-component-type="PF4/Breadcrumb"
              data-ouia-safe={true}
            >
              <ol
                className="pf-c-breadcrumb__list"
              >
                <BreadcrumbItem
                  key=".0"
                  showDivider={false}
                >
                  <li
                    className="pf-c-breadcrumb__item"
                  >
                    Section Home
                  </li>
                </BreadcrumbItem>
                <BreadcrumbItem
                  key=".1"
                  showDivider={true}
                  to="#"
                >
                  <li
                    className="pf-c-breadcrumb__item"
                  >
                    <span
                      className="pf-c-breadcrumb__item-divider"
                    >
                      <AngleRightIcon
                        color="currentColor"
                        noVerticalAlign={false}
                        size="sm"
                      >
                        <svg
                          aria-hidden={true}
                          aria-labelledby={null}
                          fill="currentColor"
                          height="1em"
                          role="img"
                          style={
                            Object {
                              "verticalAlign": "-0.125em",
                            }
                          }
                          viewBox="0 0 256 512"
                          width="1em"
                        >
                          <path
                            d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34z"
                          />
                        </svg>
                      </AngleRightIcon>
                    </span>
                    <a
                      className="pf-c-breadcrumb__link"
                      href="#"
                    >
                      Section Title
                    </a>
                  </li>
                </BreadcrumbItem>
                <BreadcrumbItem
                  key=".2"
                  showDivider={true}
                  to="#"
                >
                  <li
                    className="pf-c-breadcrumb__item"
                  >
                    <span
                      className="pf-c-breadcrumb__item-divider"
                    >
                      <AngleRightIcon
                        color="currentColor"
                        noVerticalAlign={false}
                        size="sm"
                      >
                        <svg
                          aria-hidden={true}
                          aria-labelledby={null}
                          fill="currentColor"
                          height="1em"
                          role="img"
                          style={
                            Object {
                              "verticalAlign": "-0.125em",
                            }
                          }
                          viewBox="0 0 256 512"
                          width="1em"
                        >
                          <path
                            d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34z"
                          />
                        </svg>
                      </AngleRightIcon>
                    </span>
                    <a
                      className="pf-c-breadcrumb__link"
                      href="#"
                    >
                      Section Title
                    </a>
                  </li>
                </BreadcrumbItem>
                <BreadcrumbItem
                  isActive={true}
                  key=".3"
                  showDivider={true}
                  to="#"
                >
                  <li
                    className="pf-c-breadcrumb__item"
                  >
                    <span
                      className="pf-c-breadcrumb__item-divider"
                    >
                      <AngleRightIcon
                        color="currentColor"
                        noVerticalAlign={false}
                        size="sm"
                      >
                        <svg
                          aria-hidden={true}
                          aria-labelledby={null}
                          fill="currentColor"
                          height="1em"
                          role="img"
                          style={
                            Object {
                              "verticalAlign": "-0.125em",
                            }
                          }
                          viewBox="0 0 256 512"
                          width="1em"
                        >
                          <path
                            d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34z"
                          />
                        </svg>
                      </AngleRightIcon>
                    </span>
                    <a
                      aria-current="page"
                      className="pf-c-breadcrumb__link pf-m-current"
                      href="#"
                    >
                      Section Landing
                    </a>
                  </li>
                </BreadcrumbItem>
              </ol>
            </nav>
          </Breadcrumb>
        </section>
      </PageBreadcrumb>
      <PageSection
        variant="default"
      >
        <section
          className="pf-c-page__main-section"
        >
          Section with default background
        </section>
      </PageSection>
      <PageSection
        variant="light"
      >
        <section
          className="pf-c-page__main-section pf-m-light"
        >
          Section with light background
        </section>
      </PageSection>
      <PageSection
        variant="dark"
      >
        <section
          className="pf-c-page__main-section pf-m-dark-200"
        >
          Section with dark background
        </section>
      </PageSection>
      <PageSection
        variant="darker"
      >
        <section
          className="pf-c-page__main-section pf-m-dark-100"
        >
          Section with darker background
        </section>
      </PageSection>
    </main>
  </div>
</Page>
`;

exports[`Check page to verify breadcrumb is created 1`] = `
<Page
  aria-label="Page layout"
  breadcrumb={<PageBreadcrumb />}
  className="my-page-class"
  defaultManagedSidebarIsOpen={true}
  getBreakpoint={[Function]}
  header={
    <PageHeader
      headerTools="PageHeaderTools | Avatar"
      logo="Logo"
      topNav="Navigation"
    />
  }
  id="PageId"
  isBreadcrumbWidthLimited={false}
  isManagedSidebar={false}
  isNotificationDrawerExpanded={false}
  mainTabIndex={-1}
  onNotificationDrawerExpand={[Function]}
  onPageResize={[Function]}
  sidebar={
    <PageSidebar
      isNavOpen={true}
    />
  }
>
  <div
    aria-label="Page layout"
    className="pf-c-page pf-m-resize-observer pf-m-breakpoint-default my-page-class"
    id="PageId"
  >
    <PageHeader
      headerTools="PageHeaderTools | Avatar"
      logo="Logo"
      topNav="Navigation"
    >
      <header
        className="pf-c-page__header"
      >
        <div
          className="pf-c-page__header-brand"
        >
          <a
            className="pf-c-page__header-brand-link"
          >
            Logo
          </a>
        </div>
        <div
          className="pf-c-page__header-nav"
        >
          Navigation
        </div>
        PageHeaderTools | Avatar
      </header>
    </PageHeader>
    <PageSidebar
      isNavOpen={true}
    >
      <div
        aria-hidden={false}
        className="pf-c-page__sidebar pf-m-expanded"
        id="page-sidebar"
      >
        <div
          className="pf-c-page__sidebar-body"
        />
      </div>
    </PageSidebar>
    <main
      className="pf-c-page__main"
      tabIndex={-1}
    >
      <section
        className="pf-c-page__main-breadcrumb"
      >
        <PageBreadcrumb>
          <Breadcrumb>
            <nav
              aria-label="Breadcrumb"
              className="pf-c-breadcrumb"
              data-ouia-component-id="OUIA-Generated-Breadcrumb-1"
              data-ouia-component-type="PF4/Breadcrumb"
              data-ouia-safe={true}
            >
              <ol
                className="pf-c-breadcrumb__list"
              >
                <BreadcrumbItem
                  key=".0"
                  showDivider={false}
                >
                  <li
                    className="pf-c-breadcrumb__item"
                  >
                    Section Home
                  </li>
                </BreadcrumbItem>
                <BreadcrumbItem
                  key=".1"
                  showDivider={true}
                  to="#"
                >
                  <li
                    className="pf-c-breadcrumb__item"
                  >
                    <span
                      className="pf-c-breadcrumb__item-divider"
                    >
                      <AngleRightIcon
                        color="currentColor"
                        noVerticalAlign={false}
                        size="sm"
                      >
                        <svg
                          aria-hidden={true}
                          aria-labelledby={null}
                          fill="currentColor"
                          height="1em"
                          role="img"
                          style={
                            Object {
                              "verticalAlign": "-0.125em",
                            }
                          }
                          viewBox="0 0 256 512"
                          width="1em"
                        >
                          <path
                            d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34z"
                          />
                        </svg>
                      </AngleRightIcon>
                    </span>
                    <a
                      className="pf-c-breadcrumb__link"
                      href="#"
                    >
                      Section Title
                    </a>
                  </li>
                </BreadcrumbItem>
                <BreadcrumbItem
                  key=".2"
                  showDivider={true}
                  to="#"
                >
                  <li
                    className="pf-c-breadcrumb__item"
                  >
                    <span
                      className="pf-c-breadcrumb__item-divider"
                    >
                      <AngleRightIcon
                        color="currentColor"
                        noVerticalAlign={false}
                        size="sm"
                      >
                        <svg
                          aria-hidden={true}
                          aria-labelledby={null}
                          fill="currentColor"
                          height="1em"
                          role="img"
                          style={
                            Object {
                              "verticalAlign": "-0.125em",
                            }
                          }
                          viewBox="0 0 256 512"
                          width="1em"
                        >
                          <path
                            d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34z"
                          />
                        </svg>
                      </AngleRightIcon>
                    </span>
                    <a
                      className="pf-c-breadcrumb__link"
                      href="#"
                    >
                      Section Title
                    </a>
                  </li>
                </BreadcrumbItem>
                <BreadcrumbItem
                  isActive={true}
                  key=".3"
                  showDivider={true}
                  to="#"
                >
                  <li
                    className="pf-c-breadcrumb__item"
                  >
                    <span
                      className="pf-c-breadcrumb__item-divider"
                    >
                      <AngleRightIcon
                        color="currentColor"
                        noVerticalAlign={false}
                        size="sm"
                      >
                        <svg
                          aria-hidden={true}
                          aria-labelledby={null}
                          fill="currentColor"
                          height="1em"
                          role="img"
                          style={
                            Object {
                              "verticalAlign": "-0.125em",
                            }
                          }
                          viewBox="0 0 256 512"
                          width="1em"
                        >
                          <path
                            d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34z"
                          />
                        </svg>
                      </AngleRightIcon>
                    </span>
                    <a
                      aria-current="page"
                      className="pf-c-breadcrumb__link pf-m-current"
                      href="#"
                    >
                      Section Landing
                    </a>
                  </li>
                </BreadcrumbItem>
              </ol>
            </nav>
          </Breadcrumb>
        </PageBreadcrumb>
      </section>
      <PageSection
        variant="default"
      >
        <section
          className="pf-c-page__main-section"
        >
          Section with default background
        </section>
      </PageSection>
      <PageSection
        variant="light"
      >
        <section
          className="pf-c-page__main-section pf-m-light"
        >
          Section with light background
        </section>
      </PageSection>
      <PageSection
        variant="dark"
      >
        <section
          className="pf-c-page__main-section pf-m-dark-200"
        >
          Section with dark background
        </section>
      </PageSection>
      <PageSection
        variant="darker"
      >
        <section
          className="pf-c-page__main-section pf-m-dark-100"
        >
          Section with darker background
        </section>
      </PageSection>
    </main>
  </div>
</Page>
`;

exports[`Check page to verify grouped nav and breadcrumb - new components syntax 1`] = `
<Page
  aria-label="Page layout"
  className="my-page-class"
  defaultManagedSidebarIsOpen={true}
  getBreakpoint={[Function]}
  header={
    <PageHeader
      headerTools="PageHeaderTools | Avatar"
      logo="Logo"
      topNav="Navigation"
    />
  }
  id="PageId"
  isBreadcrumbWidthLimited={false}
  isManagedSidebar={false}
  isNotificationDrawerExpanded={false}
  mainTabIndex={-1}
  onNotificationDrawerExpand={[Function]}
  onPageResize={[Function]}
  sidebar={
    <PageSidebar
      isNavOpen={true}
    />
  }
>
  <div
    aria-label="Page layout"
    className="pf-c-page pf-m-resize-observer pf-m-breakpoint-default my-page-class"
    id="PageId"
  >
    <PageHeader
      headerTools="PageHeaderTools | Avatar"
      logo="Logo"
      topNav="Navigation"
    >
      <header
        className="pf-c-page__header"
      >
        <div
          className="pf-c-page__header-brand"
        >
          <a
            className="pf-c-page__header-brand-link"
          >
            Logo
          </a>
        </div>
        <div
          className="pf-c-page__header-nav"
        >
          Navigation
        </div>
        PageHeaderTools | Avatar
      </header>
    </PageHeader>
    <PageSidebar
      isNavOpen={true}
    >
      <div
        aria-hidden={false}
        className="pf-c-page__sidebar pf-m-expanded"
        id="page-sidebar"
      >
        <div
          className="pf-c-page__sidebar-body"
        />
      </div>
    </PageSidebar>
    <main
      className="pf-c-page__main"
      tabIndex={-1}
    >
      <PageGroup
        sticky="bottom"
      >
        <div
          className="pf-c-page__main-group pf-m-sticky-bottom"
        >
          <PageBreadcrumb>
            <section
              className="pf-c-page__main-breadcrumb"
            >
              <Breadcrumb>
                <nav
                  aria-label="Breadcrumb"
                  className="pf-c-breadcrumb"
                  data-ouia-component-id="OUIA-Generated-Breadcrumb-3"
                  data-ouia-component-type="PF4/Breadcrumb"
                  data-ouia-safe={true}
                >
                  <ol
                    className="pf-c-breadcrumb__list"
                  >
                    <BreadcrumbItem
                      key=".0"
                      showDivider={false}
                    >
                      <li
                        className="pf-c-breadcrumb__item"
                      >
                        Section Home
                      </li>
                    </BreadcrumbItem>
                    <BreadcrumbItem
                      key=".1"
                      showDivider={true}
                      to="#"
                    >
                      <li
                        className="pf-c-breadcrumb__item"
                      >
                        <span
                          className="pf-c-breadcrumb__item-divider"
                        >
                          <AngleRightIcon
                            color="currentColor"
                            noVerticalAlign={false}
                            size="sm"
                          >
                            <svg
                              aria-hidden={true}
                              aria-labelledby={null}
                              fill="currentColor"
                              height="1em"
                              role="img"
                              style={
                                Object {
                                  "verticalAlign": "-0.125em",
                                }
                              }
                              viewBox="0 0 256 512"
                              width="1em"
                            >
                              <path
                                d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34z"
                              />
                            </svg>
                          </AngleRightIcon>
                        </span>
                        <a
                          className="pf-c-breadcrumb__link"
                          href="#"
                        >
                          Section Title
                        </a>
                      </li>
                    </BreadcrumbItem>
                    <BreadcrumbItem
                      key=".2"
                      showDivider={true}
                      to="#"
                    >
                      <li
                        className="pf-c-breadcrumb__item"
                      >
                        <span
                          className="pf-c-breadcrumb__item-divider"
                        >
                          <AngleRightIcon
                            color="currentColor"
                            noVerticalAlign={false}
                            size="sm"
                          >
                            <svg
                              aria-hidden={true}
                              aria-labelledby={null}
                              fill="currentColor"
                              height="1em"
                              role="img"
                              style={
                                Object {
                                  "verticalAlign": "-0.125em",
                                }
                              }
                              viewBox="0 0 256 512"
                              width="1em"
                            >
                              <path
                                d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34z"
                              />
                            </svg>
                          </AngleRightIcon>
                        </span>
                        <a
                          className="pf-c-breadcrumb__link"
                          href="#"
                        >
                          Section Title
                        </a>
                      </li>
                    </BreadcrumbItem>
                    <BreadcrumbItem
                      isActive={true}
                      key=".3"
                      showDivider={true}
                      to="#"
                    >
                      <li
                        className="pf-c-breadcrumb__item"
                      >
                        <span
                          className="pf-c-breadcrumb__item-divider"
                        >
                          <AngleRightIcon
                            color="currentColor"
                            noVerticalAlign={false}
                            size="sm"
                          >
                            <svg
                              aria-hidden={true}
                              aria-labelledby={null}
                              fill="currentColor"
                              height="1em"
                              role="img"
                              style={
                                Object {
                                  "verticalAlign": "-0.125em",
                                }
                              }
                              viewBox="0 0 256 512"
                              width="1em"
                            >
                              <path
                                d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34z"
                              />
                            </svg>
                          </AngleRightIcon>
                        </span>
                        <a
                          aria-current="page"
                          className="pf-c-breadcrumb__link pf-m-current"
                          href="#"
                        >
                          Section Landing
                        </a>
                      </li>
                    </BreadcrumbItem>
                  </ol>
                </nav>
              </Breadcrumb>
            </section>
          </PageBreadcrumb>
          <PageNavigation>
            <div
              className="pf-c-page__main-nav"
            >
              <Nav
                aria-label="Nav"
                onSelect={[Function]}
                onToggle={[Function]}
                ouiaSafe={true}
                theme="dark"
                variant="tertiary"
              >
                <nav
                  aria-label="Nav"
                  className="pf-c-nav pf-m-horizontal pf-m-tertiary"
                  data-ouia-component-id="OUIA-Generated-Nav-tertiary-2"
                  data-ouia-component-type="PF4/Nav"
                  data-ouia-safe={true}
                >
                  <NavList
                    ariaLeftScroll="Scroll left"
                    ariaRightScroll="Scroll right"
                  >
                    <button
                      aria-label="Scroll left"
                      className="pf-c-nav__scroll-button"
                      disabled={true}
                      onClick={[Function]}
                      tabIndex={null}
                    >
                      <AngleLeftIcon
                        color="currentColor"
                        noVerticalAlign={false}
                        size="sm"
                      >
                        <svg
                          aria-hidden={true}
                          aria-labelledby={null}
                          fill="currentColor"
                          height="1em"
                          role="img"
                          style={
                            Object {
                              "verticalAlign": "-0.125em",
                            }
                          }
                          viewBox="0 0 256 512"
                          width="1em"
                        >
                          <path
                            d="M31.7 239l136-136c9.4-9.4 24.6-9.4 33.9 0l22.6 22.6c9.4 9.4 9.4 24.6 0 33.9L127.9 256l96.4 96.4c9.4 9.4 9.4 24.6 0 33.9L201.7 409c-9.4 9.4-24.6 9.4-33.9 0l-136-136c-9.5-9.4-9.5-24.6-.1-34z"
                          />
                        </svg>
                      </AngleLeftIcon>
                    </button>
                    <ul
                      className="pf-c-nav__list"
                      onScroll={[Function]}
                    >
                      <NavItem
                        isActive={true}
                        itemId={0}
                      >
                        <li
                          className="pf-c-nav__item"
                          data-ouia-component-id="OUIA-Generated-NavItem-6"
                          data-ouia-component-type="PF4/NavItem"
                          data-ouia-safe={true}
                          onMouseOver={[Function]}
                        >
                          <a
                            aria-current="page"
                            className="pf-c-nav__link pf-m-current"
                            onClick={[Function]}
                            tabIndex={null}
                          >
                            System Panel
                          </a>
                        </li>
                      </NavItem>
                      <NavItem
                        itemId={1}
                      >
                        <li
                          className="pf-c-nav__item"
                          data-ouia-component-id="OUIA-Generated-NavItem-7"
                          data-ouia-component-type="PF4/NavItem"
                          data-ouia-safe={true}
                          onMouseOver={[Function]}
                        >
                          <a
                            aria-current={null}
                            className="pf-c-nav__link"
                            onClick={[Function]}
                            tabIndex={null}
                          >
                            Policy
                          </a>
                        </li>
                      </NavItem>
                      <NavItem
                        itemId={2}
                      >
                        <li
                          className="pf-c-nav__item"
                          data-ouia-component-id="OUIA-Generated-NavItem-8"
                          data-ouia-component-type="PF4/NavItem"
                          data-ouia-safe={true}
                          onMouseOver={[Function]}
                        >
                          <a
                            aria-current={null}
                            className="pf-c-nav__link"
                            onClick={[Function]}
                            tabIndex={null}
                          >
                            Authentication
                          </a>
                        </li>
                      </NavItem>
                      <NavItem
                        itemId={3}
                      >
                        <li
                          className="pf-c-nav__item"
                          data-ouia-component-id="OUIA-Generated-NavItem-9"
                          data-ouia-component-type="PF4/NavItem"
                          data-ouia-safe={true}
                          onMouseOver={[Function]}
                        >
                          <a
                            aria-current={null}
                            className="pf-c-nav__link"
                            onClick={[Function]}
                            tabIndex={null}
                          >
                            Network Services
                          </a>
                        </li>
                      </NavItem>
                      <NavItem
                        itemId={4}
                      >
                        <li
                          className="pf-c-nav__item"
                          data-ouia-component-id="OUIA-Generated-NavItem-10"
                          data-ouia-component-type="PF4/NavItem"
                          data-ouia-safe={true}
                          onMouseOver={[Function]}
                        >
                          <a
                            aria-current={null}
                            className="pf-c-nav__link"
                            onClick={[Function]}
                            tabIndex={null}
                          >
                            Server
                          </a>
                        </li>
                      </NavItem>
                    </ul>
                    <button
                      aria-label="Scroll right"
                      className="pf-c-nav__scroll-button"
                      disabled={true}
                      onClick={[Function]}
                      tabIndex={null}
                    >
                      <AngleRightIcon
                        color="currentColor"
                        noVerticalAlign={false}
                        size="sm"
                      >
                        <svg
                          aria-hidden={true}
                          aria-labelledby={null}
                          fill="currentColor"
                          height="1em"
                          role="img"
                          style={
                            Object {
                              "verticalAlign": "-0.125em",
                            }
                          }
                          viewBox="0 0 256 512"
                          width="1em"
                        >
                          <path
                            d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34z"
                          />
                        </svg>
                      </AngleRightIcon>
                    </button>
                  </NavList>
                </nav>
              </Nav>
            </div>
          </PageNavigation>
        </div>
      </PageGroup>
      <PageSection
        variant="default"
      >
        <section
          className="pf-c-page__main-section"
        >
          Section with default background
        </section>
      </PageSection>
      <PageSection
        variant="light"
      >
        <section
          className="pf-c-page__main-section pf-m-light"
        >
          Section with light background
        </section>
      </PageSection>
      <PageSection
        variant="dark"
      >
        <section
          className="pf-c-page__main-section pf-m-dark-200"
        >
          Section with dark background
        </section>
      </PageSection>
      <PageSection
        variant="darker"
      >
        <section
          className="pf-c-page__main-section pf-m-dark-100"
        >
          Section with darker background
        </section>
      </PageSection>
    </main>
  </div>
</Page>
`;

exports[`Check page to verify grouped nav and breadcrumb - old / props syntax 1`] = `
<Page
  aria-label="Page layout"
  breadcrumb={
    <PageBreadcrumb>
      <Breadcrumb>
        <BreadcrumbItem>
          Section Home
        </BreadcrumbItem>
        <BreadcrumbItem
          to="#"
        >
          Section Title
        </BreadcrumbItem>
        <BreadcrumbItem
          to="#"
        >
          Section Title
        </BreadcrumbItem>
        <BreadcrumbItem
          isActive={true}
          to="#"
        >
          Section Landing
        </BreadcrumbItem>
      </Breadcrumb>
    </PageBreadcrumb>
  }
  className="my-page-class"
  defaultManagedSidebarIsOpen={true}
  getBreakpoint={[Function]}
  groupProps={
    Object {
      "hasShadowTop": true,
      "sticky": "bottom",
    }
  }
  header={
    <PageHeader
      headerTools="PageHeaderTools | Avatar"
      logo="Logo"
      topNav="Navigation"
    />
  }
  id="PageId"
  isBreadcrumbGrouped={true}
  isBreadcrumbWidthLimited={false}
  isManagedSidebar={false}
  isNotificationDrawerExpanded={false}
  isTertiaryNavGrouped={true}
  mainTabIndex={-1}
  onNotificationDrawerExpand={[Function]}
  onPageResize={[Function]}
  sidebar={
    <PageSidebar
      isNavOpen={true}
    />
  }
  tertiaryNav={
    <Nav
      aria-label="Nav"
      onSelect={[Function]}
      onToggle={[Function]}
      ouiaSafe={true}
      theme="dark"
      variant="tertiary"
    >
      <NavList
        ariaLeftScroll="Scroll left"
        ariaRightScroll="Scroll right"
      >
        <NavItem
          isActive={true}
          itemId={0}
        >
          System Panel
        </NavItem>
        <NavItem
          itemId={1}
        >
          Policy
        </NavItem>
        <NavItem
          itemId={2}
        >
          Authentication
        </NavItem>
        <NavItem
          itemId={3}
        >
          Network Services
        </NavItem>
        <NavItem
          itemId={4}
        >
          Server
        </NavItem>
      </NavList>
    </Nav>
  }
>
  <div
    aria-label="Page layout"
    className="pf-c-page pf-m-resize-observer pf-m-breakpoint-default my-page-class"
    id="PageId"
  >
    <PageHeader
      headerTools="PageHeaderTools | Avatar"
      logo="Logo"
      topNav="Navigation"
    >
      <header
        className="pf-c-page__header"
      >
        <div
          className="pf-c-page__header-brand"
        >
          <a
            className="pf-c-page__header-brand-link"
          >
            Logo
          </a>
        </div>
        <div
          className="pf-c-page__header-nav"
        >
          Navigation
        </div>
        PageHeaderTools | Avatar
      </header>
    </PageHeader>
    <PageSidebar
      isNavOpen={true}
    >
      <div
        aria-hidden={false}
        className="pf-c-page__sidebar pf-m-expanded"
        id="page-sidebar"
      >
        <div
          className="pf-c-page__sidebar-body"
        />
      </div>
    </PageSidebar>
    <main
      className="pf-c-page__main"
      tabIndex={-1}
    >
      <PageGroup
        hasShadowTop={true}
        sticky="bottom"
      >
        <div
          className="pf-c-page__main-group pf-m-sticky-bottom pf-m-shadow-top"
        >
          <div
            className="pf-c-page__main-nav"
          >
            <Nav
              aria-label="Nav"
              onSelect={[Function]}
              onToggle={[Function]}
              ouiaSafe={true}
              theme="dark"
              variant="tertiary"
            >
              <nav
                aria-label="Nav"
                className="pf-c-nav pf-m-horizontal pf-m-tertiary"
                data-ouia-component-id="OUIA-Generated-Nav-tertiary-3"
                data-ouia-component-type="PF4/Nav"
                data-ouia-safe={true}
              >
                <NavList
                  ariaLeftScroll="Scroll left"
                  ariaRightScroll="Scroll right"
                >
                  <button
                    aria-label="Scroll left"
                    className="pf-c-nav__scroll-button"
                    disabled={true}
                    onClick={[Function]}
                    tabIndex={null}
                  >
                    <AngleLeftIcon
                      color="currentColor"
                      noVerticalAlign={false}
                      size="sm"
                    >
                      <svg
                        aria-hidden={true}
                        aria-labelledby={null}
                        fill="currentColor"
                        height="1em"
                        role="img"
                        style={
                          Object {
                            "verticalAlign": "-0.125em",
                          }
                        }
                        viewBox="0 0 256 512"
                        width="1em"
                      >
                        <path
                          d="M31.7 239l136-136c9.4-9.4 24.6-9.4 33.9 0l22.6 22.6c9.4 9.4 9.4 24.6 0 33.9L127.9 256l96.4 96.4c9.4 9.4 9.4 24.6 0 33.9L201.7 409c-9.4 9.4-24.6 9.4-33.9 0l-136-136c-9.5-9.4-9.5-24.6-.1-34z"
                        />
                      </svg>
                    </AngleLeftIcon>
                  </button>
                  <ul
                    className="pf-c-nav__list"
                    onScroll={[Function]}
                  >
                    <NavItem
                      isActive={true}
                      itemId={0}
                    >
                      <li
                        className="pf-c-nav__item"
                        data-ouia-component-id="OUIA-Generated-NavItem-11"
                        data-ouia-component-type="PF4/NavItem"
                        data-ouia-safe={true}
                        onMouseOver={[Function]}
                      >
                        <a
                          aria-current="page"
                          className="pf-c-nav__link pf-m-current"
                          onClick={[Function]}
                          tabIndex={null}
                        >
                          System Panel
                        </a>
                      </li>
                    </NavItem>
                    <NavItem
                      itemId={1}
                    >
                      <li
                        className="pf-c-nav__item"
                        data-ouia-component-id="OUIA-Generated-NavItem-12"
                        data-ouia-component-type="PF4/NavItem"
                        data-ouia-safe={true}
                        onMouseOver={[Function]}
                      >
                        <a
                          aria-current={null}
                          className="pf-c-nav__link"
                          onClick={[Function]}
                          tabIndex={null}
                        >
                          Policy
                        </a>
                      </li>
                    </NavItem>
                    <NavItem
                      itemId={2}
                    >
                      <li
                        className="pf-c-nav__item"
                        data-ouia-component-id="OUIA-Generated-NavItem-13"
                        data-ouia-component-type="PF4/NavItem"
                        data-ouia-safe={true}
                        onMouseOver={[Function]}
                      >
                        <a
                          aria-current={null}
                          className="pf-c-nav__link"
                          onClick={[Function]}
                          tabIndex={null}
                        >
                          Authentication
                        </a>
                      </li>
                    </NavItem>
                    <NavItem
                      itemId={3}
                    >
                      <li
                        className="pf-c-nav__item"
                        data-ouia-component-id="OUIA-Generated-NavItem-14"
                        data-ouia-component-type="PF4/NavItem"
                        data-ouia-safe={true}
                        onMouseOver={[Function]}
                      >
                        <a
                          aria-current={null}
                          className="pf-c-nav__link"
                          onClick={[Function]}
                          tabIndex={null}
                        >
                          Network Services
                        </a>
                      </li>
                    </NavItem>
                    <NavItem
                      itemId={4}
                    >
                      <li
                        className="pf-c-nav__item"
                        data-ouia-component-id="OUIA-Generated-NavItem-15"
                        data-ouia-component-type="PF4/NavItem"
                        data-ouia-safe={true}
                        onMouseOver={[Function]}
                      >
                        <a
                          aria-current={null}
                          className="pf-c-nav__link"
                          onClick={[Function]}
                          tabIndex={null}
                        >
                          Server
                        </a>
                      </li>
                    </NavItem>
                  </ul>
                  <button
                    aria-label="Scroll right"
                    className="pf-c-nav__scroll-button"
                    disabled={true}
                    onClick={[Function]}
                    tabIndex={null}
                  >
                    <AngleRightIcon
                      color="currentColor"
                      noVerticalAlign={false}
                      size="sm"
                    >
                      <svg
                        aria-hidden={true}
                        aria-labelledby={null}
                        fill="currentColor"
                        height="1em"
                        role="img"
                        style={
                          Object {
                            "verticalAlign": "-0.125em",
                          }
                        }
                        viewBox="0 0 256 512"
                        width="1em"
                      >
                        <path
                          d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34z"
                        />
                      </svg>
                    </AngleRightIcon>
                  </button>
                </NavList>
              </nav>
            </Nav>
          </div>
          <section
            className="pf-c-page__main-breadcrumb"
          >
            <PageBreadcrumb>
              <section
                className="pf-c-page__main-breadcrumb"
              >
                <Breadcrumb>
                  <nav
                    aria-label="Breadcrumb"
                    className="pf-c-breadcrumb"
                    data-ouia-component-id="OUIA-Generated-Breadcrumb-4"
                    data-ouia-component-type="PF4/Breadcrumb"
                    data-ouia-safe={true}
                  >
                    <ol
                      className="pf-c-breadcrumb__list"
                    >
                      <BreadcrumbItem
                        key=".0"
                        showDivider={false}
                      >
                        <li
                          className="pf-c-breadcrumb__item"
                        >
                          Section Home
                        </li>
                      </BreadcrumbItem>
                      <BreadcrumbItem
                        key=".1"
                        showDivider={true}
                        to="#"
                      >
                        <li
                          className="pf-c-breadcrumb__item"
                        >
                          <span
                            className="pf-c-breadcrumb__item-divider"
                          >
                            <AngleRightIcon
                              color="currentColor"
                              noVerticalAlign={false}
                              size="sm"
                            >
                              <svg
                                aria-hidden={true}
                                aria-labelledby={null}
                                fill="currentColor"
                                height="1em"
                                role="img"
                                style={
                                  Object {
                                    "verticalAlign": "-0.125em",
                                  }
                                }
                                viewBox="0 0 256 512"
                                width="1em"
                              >
                                <path
                                  d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34z"
                                />
                              </svg>
                            </AngleRightIcon>
                          </span>
                          <a
                            className="pf-c-breadcrumb__link"
                            href="#"
                          >
                            Section Title
                          </a>
                        </li>
                      </BreadcrumbItem>
                      <BreadcrumbItem
                        key=".2"
                        showDivider={true}
                        to="#"
                      >
                        <li
                          className="pf-c-breadcrumb__item"
                        >
                          <span
                            className="pf-c-breadcrumb__item-divider"
                          >
                            <AngleRightIcon
                              color="currentColor"
                              noVerticalAlign={false}
                              size="sm"
                            >
                              <svg
                                aria-hidden={true}
                                aria-labelledby={null}
                                fill="currentColor"
                                height="1em"
                                role="img"
                                style={
                                  Object {
                                    "verticalAlign": "-0.125em",
                                  }
                                }
                                viewBox="0 0 256 512"
                                width="1em"
                              >
                                <path
                                  d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34z"
                                />
                              </svg>
                            </AngleRightIcon>
                          </span>
                          <a
                            className="pf-c-breadcrumb__link"
                            href="#"
                          >
                            Section Title
                          </a>
                        </li>
                      </BreadcrumbItem>
                      <BreadcrumbItem
                        isActive={true}
                        key=".3"
                        showDivider={true}
                        to="#"
                      >
                        <li
                          className="pf-c-breadcrumb__item"
                        >
                          <span
                            className="pf-c-breadcrumb__item-divider"
                          >
                            <AngleRightIcon
                              color="currentColor"
                              noVerticalAlign={false}
                              size="sm"
                            >
                              <svg
                                aria-hidden={true}
                                aria-labelledby={null}
                                fill="currentColor"
                                height="1em"
                                role="img"
                                style={
                                  Object {
                                    "verticalAlign": "-0.125em",
                                  }
                                }
                                viewBox="0 0 256 512"
                                width="1em"
                              >
                                <path
                                  d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34z"
                                />
                              </svg>
                            </AngleRightIcon>
                          </span>
                          <a
                            aria-current="page"
                            className="pf-c-breadcrumb__link pf-m-current"
                            href="#"
                          >
                            Section Landing
                          </a>
                        </li>
                      </BreadcrumbItem>
                    </ol>
                  </nav>
                </Breadcrumb>
              </section>
            </PageBreadcrumb>
          </section>
        </div>
      </PageGroup>
      <PageSection
        variant="default"
      >
        <section
          className="pf-c-page__main-section"
        >
          Section with default background
        </section>
      </PageSection>
      <PageSection
        variant="light"
      >
        <section
          className="pf-c-page__main-section pf-m-light"
        >
          Section with light background
        </section>
      </PageSection>
      <PageSection
        variant="dark"
      >
        <section
          className="pf-c-page__main-section pf-m-dark-200"
        >
          Section with dark background
        </section>
      </PageSection>
      <PageSection
        variant="darker"
      >
        <section
          className="pf-c-page__main-section pf-m-dark-100"
        >
          Section with darker background
        </section>
      </PageSection>
    </main>
  </div>
</Page>
`;

exports[`Check page to verify nav is created - PageNavigation syntax 1`] = `
<Page
  aria-label="Page layout"
  className="my-page-class"
  defaultManagedSidebarIsOpen={true}
  getBreakpoint={[Function]}
  header={
    <PageHeader
      headerTools="PageHeaderTools | Avatar"
      logo="Logo"
      topNav="Navigation"
    />
  }
  id="PageId"
  isBreadcrumbWidthLimited={false}
  isManagedSidebar={false}
  isNotificationDrawerExpanded={false}
  mainTabIndex={-1}
  onNotificationDrawerExpand={[Function]}
  onPageResize={[Function]}
  sidebar={
    <PageSidebar
      isNavOpen={true}
    />
  }
>
  <div
    aria-label="Page layout"
    className="pf-c-page pf-m-resize-observer pf-m-breakpoint-default my-page-class"
    id="PageId"
  >
    <PageHeader
      headerTools="PageHeaderTools | Avatar"
      logo="Logo"
      topNav="Navigation"
    >
      <header
        className="pf-c-page__header"
      >
        <div
          className="pf-c-page__header-brand"
        >
          <a
            className="pf-c-page__header-brand-link"
          >
            Logo
          </a>
        </div>
        <div
          className="pf-c-page__header-nav"
        >
          Navigation
        </div>
        PageHeaderTools | Avatar
      </header>
    </PageHeader>
    <PageSidebar
      isNavOpen={true}
    >
      <div
        aria-hidden={false}
        className="pf-c-page__sidebar pf-m-expanded"
        id="page-sidebar"
      >
        <div
          className="pf-c-page__sidebar-body"
        />
      </div>
    </PageSidebar>
    <main
      className="pf-c-page__main"
      tabIndex={-1}
    >
      <PageNavigation>
        <div
          className="pf-c-page__main-nav"
        >
          <Nav
            aria-label="Nav"
            onSelect={[Function]}
            onToggle={[Function]}
            ouiaSafe={true}
            theme="dark"
            variant="tertiary"
          >
            <nav
              aria-label="Nav"
              className="pf-c-nav pf-m-horizontal pf-m-tertiary"
              data-ouia-component-id="OUIA-Generated-Nav-tertiary-1"
              data-ouia-component-type="PF4/Nav"
              data-ouia-safe={true}
            >
              <NavList
                ariaLeftScroll="Scroll left"
                ariaRightScroll="Scroll right"
              >
                <button
                  aria-label="Scroll left"
                  className="pf-c-nav__scroll-button"
                  disabled={true}
                  onClick={[Function]}
                  tabIndex={null}
                >
                  <AngleLeftIcon
                    color="currentColor"
                    noVerticalAlign={false}
                    size="sm"
                  >
                    <svg
                      aria-hidden={true}
                      aria-labelledby={null}
                      fill="currentColor"
                      height="1em"
                      role="img"
                      style={
                        Object {
                          "verticalAlign": "-0.125em",
                        }
                      }
                      viewBox="0 0 256 512"
                      width="1em"
                    >
                      <path
                        d="M31.7 239l136-136c9.4-9.4 24.6-9.4 33.9 0l22.6 22.6c9.4 9.4 9.4 24.6 0 33.9L127.9 256l96.4 96.4c9.4 9.4 9.4 24.6 0 33.9L201.7 409c-9.4 9.4-24.6 9.4-33.9 0l-136-136c-9.5-9.4-9.5-24.6-.1-34z"
                      />
                    </svg>
                  </AngleLeftIcon>
                </button>
                <ul
                  className="pf-c-nav__list"
                  onScroll={[Function]}
                >
                  <NavItem
                    isActive={true}
                    itemId={0}
                  >
                    <li
                      className="pf-c-nav__item"
                      data-ouia-component-id="OUIA-Generated-NavItem-1"
                      data-ouia-component-type="PF4/NavItem"
                      data-ouia-safe={true}
                      onMouseOver={[Function]}
                    >
                      <a
                        aria-current="page"
                        className="pf-c-nav__link pf-m-current"
                        onClick={[Function]}
                        tabIndex={null}
                      >
                        System Panel
                      </a>
                    </li>
                  </NavItem>
                  <NavItem
                    itemId={1}
                  >
                    <li
                      className="pf-c-nav__item"
                      data-ouia-component-id="OUIA-Generated-NavItem-2"
                      data-ouia-component-type="PF4/NavItem"
                      data-ouia-safe={true}
                      onMouseOver={[Function]}
                    >
                      <a
                        aria-current={null}
                        className="pf-c-nav__link"
                        onClick={[Function]}
                        tabIndex={null}
                      >
                        Policy
                      </a>
                    </li>
                  </NavItem>
                  <NavItem
                    itemId={2}
                  >
                    <li
                      className="pf-c-nav__item"
                      data-ouia-component-id="OUIA-Generated-NavItem-3"
                      data-ouia-component-type="PF4/NavItem"
                      data-ouia-safe={true}
                      onMouseOver={[Function]}
                    >
                      <a
                        aria-current={null}
                        className="pf-c-nav__link"
                        onClick={[Function]}
                        tabIndex={null}
                      >
                        Authentication
                      </a>
                    </li>
                  </NavItem>
                  <NavItem
                    itemId={3}
                  >
                    <li
                      className="pf-c-nav__item"
                      data-ouia-component-id="OUIA-Generated-NavItem-4"
                      data-ouia-component-type="PF4/NavItem"
                      data-ouia-safe={true}
                      onMouseOver={[Function]}
                    >
                      <a
                        aria-current={null}
                        className="pf-c-nav__link"
                        onClick={[Function]}
                        tabIndex={null}
                      >
                        Network Services
                      </a>
                    </li>
                  </NavItem>
                  <NavItem
                    itemId={4}
                  >
                    <li
                      className="pf-c-nav__item"
                      data-ouia-component-id="OUIA-Generated-NavItem-5"
                      data-ouia-component-type="PF4/NavItem"
                      data-ouia-safe={true}
                      onMouseOver={[Function]}
                    >
                      <a
                        aria-current={null}
                        className="pf-c-nav__link"
                        onClick={[Function]}
                        tabIndex={null}
                      >
                        Server
                      </a>
                    </li>
                  </NavItem>
                </ul>
                <button
                  aria-label="Scroll right"
                  className="pf-c-nav__scroll-button"
                  disabled={true}
                  onClick={[Function]}
                  tabIndex={null}
                >
                  <AngleRightIcon
                    color="currentColor"
                    noVerticalAlign={false}
                    size="sm"
                  >
                    <svg
                      aria-hidden={true}
                      aria-labelledby={null}
                      fill="currentColor"
                      height="1em"
                      role="img"
                      style={
                        Object {
                          "verticalAlign": "-0.125em",
                        }
                      }
                      viewBox="0 0 256 512"
                      width="1em"
                    >
                      <path
                        d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34z"
                      />
                    </svg>
                  </AngleRightIcon>
                </button>
              </NavList>
            </nav>
          </Nav>
        </div>
      </PageNavigation>
      <PageSection
        variant="default"
      >
        <section
          className="pf-c-page__main-section"
        >
          Section with default background
        </section>
      </PageSection>
      <PageSection
        variant="light"
      >
        <section
          className="pf-c-page__main-section pf-m-light"
        >
          Section with light background
        </section>
      </PageSection>
      <PageSection
        variant="dark"
      >
        <section
          className="pf-c-page__main-section pf-m-dark-200"
        >
          Section with dark background
        </section>
      </PageSection>
      <PageSection
        variant="darker"
      >
        <section
          className="pf-c-page__main-section pf-m-dark-100"
        >
          Section with darker background
        </section>
      </PageSection>
    </main>
  </div>
</Page>
`;

exports[`Check page to verify skip to content points to main content region 1`] = `
<Page
  aria-label="Page layout"
  breadcrumb={
    <Breadcrumb>
      <BreadcrumbItem>
        Section Home
      </BreadcrumbItem>
      <BreadcrumbItem
        to="#"
      >
        Section Title
      </BreadcrumbItem>
      <BreadcrumbItem
        to="#"
      >
        Section Title
      </BreadcrumbItem>
      <BreadcrumbItem
        isActive={true}
        to="#"
      >
        Section Landing
      </BreadcrumbItem>
    </Breadcrumb>
  }
  className="my-page-class"
  defaultManagedSidebarIsOpen={true}
  getBreakpoint={[Function]}
  header={
    <PageHeader
      headerTools="PageHeaderTools | Avatar"
      logo="Logo"
      topNav="Navigation"
    />
  }
  id="PageId"
  isBreadcrumbWidthLimited={false}
  isManagedSidebar={false}
  isNotificationDrawerExpanded={false}
  mainContainerId="main-content-page-layout-test-nav"
  mainTabIndex={-1}
  onNotificationDrawerExpand={[Function]}
  onPageResize={[Function]}
  sidebar={
    <PageSidebar
      isNavOpen={true}
    />
  }
  skipToContent={
    <SkipToContent
      href="#main-content-page-layout-test-nav"
      show={false}
    >
      Skip to Content
    </SkipToContent>
  }
>
  <div
    aria-label="Page layout"
    className="pf-c-page pf-m-resize-observer pf-m-breakpoint-default my-page-class"
    id="PageId"
  >
    <SkipToContent
      href="#main-content-page-layout-test-nav"
      show={false}
    >
      <a
        className="pf-c-button pf-m-primary pf-c-skip-to-content"
        href="#main-content-page-layout-test-nav"
      >
        Skip to Content
      </a>
    </SkipToContent>
    <PageHeader
      headerTools="PageHeaderTools | Avatar"
      logo="Logo"
      topNav="Navigation"
    >
      <header
        className="pf-c-page__header"
      >
        <div
          className="pf-c-page__header-brand"
        >
          <a
            className="pf-c-page__header-brand-link"
          >
            Logo
          </a>
        </div>
        <div
          className="pf-c-page__header-nav"
        >
          Navigation
        </div>
        PageHeaderTools | Avatar
      </header>
    </PageHeader>
    <PageSidebar
      isNavOpen={true}
    >
      <div
        aria-hidden={false}
        className="pf-c-page__sidebar pf-m-expanded"
        id="page-sidebar"
      >
        <div
          className="pf-c-page__sidebar-body"
        />
      </div>
    </PageSidebar>
    <main
      className="pf-c-page__main"
      id="main-content-page-layout-test-nav"
      tabIndex={-1}
    >
      <section
        className="pf-c-page__main-breadcrumb"
      >
        <Breadcrumb>
          <nav
            aria-label="Breadcrumb"
            className="pf-c-breadcrumb"
            data-ouia-component-id="OUIA-Generated-Breadcrumb-5"
            data-ouia-component-type="PF4/Breadcrumb"
            data-ouia-safe={true}
          >
            <ol
              className="pf-c-breadcrumb__list"
            >
              <BreadcrumbItem
                key=".0"
                showDivider={false}
              >
                <li
                  className="pf-c-breadcrumb__item"
                >
                  Section Home
                </li>
              </BreadcrumbItem>
              <BreadcrumbItem
                key=".1"
                showDivider={true}
                to="#"
              >
                <li
                  className="pf-c-breadcrumb__item"
                >
                  <span
                    className="pf-c-breadcrumb__item-divider"
                  >
                    <AngleRightIcon
                      color="currentColor"
                      noVerticalAlign={false}
                      size="sm"
                    >
                      <svg
                        aria-hidden={true}
                        aria-labelledby={null}
                        fill="currentColor"
                        height="1em"
                        role="img"
                        style={
                          Object {
                            "verticalAlign": "-0.125em",
                          }
                        }
                        viewBox="0 0 256 512"
                        width="1em"
                      >
                        <path
                          d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34z"
                        />
                      </svg>
                    </AngleRightIcon>
                  </span>
                  <a
                    className="pf-c-breadcrumb__link"
                    href="#"
                  >
                    Section Title
                  </a>
                </li>
              </BreadcrumbItem>
              <BreadcrumbItem
                key=".2"
                showDivider={true}
                to="#"
              >
                <li
                  className="pf-c-breadcrumb__item"
                >
                  <span
                    className="pf-c-breadcrumb__item-divider"
                  >
                    <AngleRightIcon
                      color="currentColor"
                      noVerticalAlign={false}
                      size="sm"
                    >
                      <svg
                        aria-hidden={true}
                        aria-labelledby={null}
                        fill="currentColor"
                        height="1em"
                        role="img"
                        style={
                          Object {
                            "verticalAlign": "-0.125em",
                          }
                        }
                        viewBox="0 0 256 512"
                        width="1em"
                      >
                        <path
                          d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34z"
                        />
                      </svg>
                    </AngleRightIcon>
                  </span>
                  <a
                    className="pf-c-breadcrumb__link"
                    href="#"
                  >
                    Section Title
                  </a>
                </li>
              </BreadcrumbItem>
              <BreadcrumbItem
                isActive={true}
                key=".3"
                showDivider={true}
                to="#"
              >
                <li
                  className="pf-c-breadcrumb__item"
                >
                  <span
                    className="pf-c-breadcrumb__item-divider"
                  >
                    <AngleRightIcon
                      color="currentColor"
                      noVerticalAlign={false}
                      size="sm"
                    >
                      <svg
                        aria-hidden={true}
                        aria-labelledby={null}
                        fill="currentColor"
                        height="1em"
                        role="img"
                        style={
                          Object {
                            "verticalAlign": "-0.125em",
                          }
                        }
                        viewBox="0 0 256 512"
                        width="1em"
                      >
                        <path
                          d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34z"
                        />
                      </svg>
                    </AngleRightIcon>
                  </span>
                  <a
                    aria-current="page"
                    className="pf-c-breadcrumb__link pf-m-current"
                    href="#"
                  >
                    Section Landing
                  </a>
                </li>
              </BreadcrumbItem>
            </ol>
          </nav>
        </Breadcrumb>
      </section>
      <PageSection
        variant="default"
      >
        <section
          className="pf-c-page__main-section"
        >
          Section with default background
        </section>
      </PageSection>
      <PageSection
        variant="light"
      >
        <section
          className="pf-c-page__main-section pf-m-light"
        >
          Section with light background
        </section>
      </PageSection>
      <PageSection
        variant="dark"
      >
        <section
          className="pf-c-page__main-section pf-m-dark-200"
        >
          Section with dark background
        </section>
      </PageSection>
      <PageSection
        variant="darker"
      >
        <section
          className="pf-c-page__main-section pf-m-dark-100"
        >
          Section with darker background
        </section>
      </PageSection>
    </main>
  </div>
</Page>
`;

exports[`Check page vertical layout example against snapshot 1`] = `
<Page
  aria-label="Page layout"
  className="my-page-class"
  defaultManagedSidebarIsOpen={true}
  getBreakpoint={[Function]}
  header={
    <PageHeader
      headerTools="PageHeaderTools | Avatar"
      logo="Logo"
      onNavToggle={[Function]}
    />
  }
  id="PageId"
  isBreadcrumbWidthLimited={false}
  isManagedSidebar={false}
  isNotificationDrawerExpanded={false}
  mainTabIndex={-1}
  onNotificationDrawerExpand={[Function]}
  onPageResize={[Function]}
  sidebar={
    <PageSidebar
      isNavOpen={true}
      nav="Navigation"
    />
  }
>
  <div
    aria-label="Page layout"
    className="pf-c-page pf-m-resize-observer pf-m-breakpoint-default my-page-class"
    id="PageId"
  >
    <PageHeader
      headerTools="PageHeaderTools | Avatar"
      logo="Logo"
      onNavToggle={[Function]}
    >
      <header
        className="pf-c-page__header"
      >
        <div
          className="pf-c-page__header-brand"
        >
          <a
            className="pf-c-page__header-brand-link"
          >
            Logo
          </a>
        </div>
        PageHeaderTools | Avatar
      </header>
    </PageHeader>
    <PageSidebar
      isNavOpen={true}
      nav="Navigation"
    >
      <div
        aria-hidden={false}
        className="pf-c-page__sidebar pf-m-expanded"
        id="page-sidebar"
      >
        <div
          className="pf-c-page__sidebar-body"
        >
          Navigation
        </div>
      </div>
    </PageSidebar>
    <main
      className="pf-c-page__main"
      tabIndex={-1}
    >
      <PageSection
        variant="default"
      >
        <section
          className="pf-c-page__main-section"
        >
          Section with default background
        </section>
      </PageSection>
      <PageSection
        variant="light"
      >
        <section
          className="pf-c-page__main-section pf-m-light"
        >
          Section with light background
        </section>
      </PageSection>
      <PageSection
        variant="dark"
      >
        <section
          className="pf-c-page__main-section pf-m-dark-200"
        >
          Section with dark background
        </section>
      </PageSection>
      <PageSection
        variant="darker"
      >
        <section
          className="pf-c-page__main-section pf-m-dark-100"
        >
          Section with darker background
        </section>
      </PageSection>
    </main>
  </div>
</Page>
`;
